feat: add HTTP request utilities and a new command to display synchronization status details.